# wren-monorepo

./: .gitguardian.yaml  .gitignore  .mcp.json  PLAN.md  README.md
.github/: CI_README.md  README.md
.github/workflows/: ci.yml  codeql.yml  dependency-updates.yml
docs/: Interim Report.md  integrations.md  sandbox_report.md
wren_agent/: .gitignore  README.md  pyproject.toml  test_script.py
wren_agent/agent/: __init__.py  context.py  core.py  main.py
wren_agent/agent/prompts/: __init__.py  system.py
wren_agent/agent/tools/: __init__.py  integration_docs.py  semgrep_rules.yaml  static_analyzer.py  test_script.py  wren_validator.py  write_script.py
wren_agent/docs/: static_analysis.md
wren_agent/scripts/: daily_discord_weather.py  daily_weather_discord.py  daily_weather_notification.py  discord_weather_deploy.py  discord_weather_notification.py  weather_notification.py  weather_to_discord.py
wren_agent/scripts/daily_summary/: daily_email_summary.py  email_summary.py
wren_agent/scripts/debug_test/: scheduled_hello.py  scheduled_hello_world.py
wren_agent/scripts/email_classification/: email_classifier.py
wren_agent/scripts/extract_invoice/: invoice_email_processor.py  invoice_handler.py  invoice_handler_correct.py  invoice_processor.py
wren_agent/scripts/gmail_notification/: email_notification.py
wren_agent/scripts/simple_schedule/: hello_world_schedule.py  hello_world_scheduler.py  scheduled_hello_world.py
wren_agent/tests/integration/: test_agent.py
wren_agent/tests/unit/: test_security_batch.py  test_static_analyzer.py  test_tools.py
wren_agent/wren_scripts/: hello_world_scheduler.py
wren_backend/: .env.example  backend-plan.md  main.py  pyproject.toml  supabase_types.ts
wren_backend/scripts/: e2e.sh
wren_backend/src/wren_backend/: __init__.py  main.py
wren_backend/src/wren_backend/api/: __init__.py  credentials.py  deploy.py  deployments.py  deps.py  runs.py  validate.py
wren_backend/src/wren_backend/core/: __init__.py  credentials.py  database.py  executor.py  scheduler.py  storage.py  supabase_client.py
wren_backend/src/wren_backend/integrations/: __init__.py  gmail.py  registry.py  slack.py
wren_backend/src/wren_backend/models/: __init__.py  deployment.py  errors.py  run.py
wren_backend/tests/: __init__.py  conftest.py  fakes.py  test_api.py  test_credentials_api.py  test_e2e.py  test_executor.py  test_scheduler.py  test_storage.py
wren_frontend/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
wren_frontend/src/: routeTree.gen.ts
wren_frontend/src/lib/: api.ts
wren_frontend/src/lib/__tests__/: api.test.ts
wren_frontend/src/routes/: _authenticated.tsx  login.tsx  signup.tsx
wren_frontend/src/routes/__tests__/: integrations.test.tsx  login.test.tsx
wren_frontend/src/routes/_authenticated/: deployments.tsx  index.tsx  integrations.tsx
wren_frontend/src/test/: setup.ts
wren_src/: .gitignore  README.md  pyproject.toml
wren_src/src/wren/: __init__.py  cli.py
wren_src/src/wren/ai/: __init__.py  interface.py  llm.py
wren_src/src/wren/core/: __init__.py  config.py  context.py  registry.py  runtime.py  types.py
wren_src/src/wren/errors/: __init__.py  base.py  classifier.py
wren_src/src/wren/integrations/: __init__.py  base.py  cron.py  discord.py  docs.py  gmail.py  messaging.py  slack.py  stub.py
wren_src/src/wren/triggers/: __init__.py  decorators.py
wren_src/tests/: __init__.py  test_ai.py  test_decorators.py  test_integration_docs.py  test_integrations.py  test_registry.py
